--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "plugins": ["add-module-exports"],
+  "plugins": ["add-module-exports", "syntax-flow"],
   "presets": ["es2015", "es2016-node5"]
 }
