--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
-node_modules/
+._*
+.apdisk
+.AppleDB
+.AppleDesktop
+.AppleDouble
+.DocumentRevisions-V100
+.DS_Store
+.fseventsd
+.grunt
+.idea
+.LSOverride
+.sass-cache
+.settings
+.Spotlight-V100
+.sublime-grunt.cache
+.TemporaryItems
+.tmp
+.Trashes
+.VolumeIcon.icns
 *.log
-
-# Inspired by https://github.com/github/gitignore
+node_modules/
